Final styling for mobile. Fixed risk circles going to 1 column too early. Fixed detail cards not adjusting from 3 columns to 1 column on mobile. Changed search box placeholder text to shorter text and made directions display on both the home and the ip-query page. Fixed display of ip-query table for mobile, hid blacklist column because table is just too wide for small screens.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,6 +19,7 @@
 }
 .title{
 	padding-left: 20px;
+	white-space: normal;
 }
 
 .title-padding {
