--- a/src/app/ip-detail/ip-detail.component.css
+++ b/src/app/ip-detail/ip-detail.component.css
@@ -1,7 +1,30 @@
+.breadcrumb{
+	padding: 20px 0;
+}
+.mat-card{
+	margin-bottom: 40px;
+	padding: 24px 2%;
+}
 .card-grid-card{
-	width: 28%;
 	float: left;
+	width: 28%;
 }
 .card-grid-card.middle{
-	margin: 0 2%;
+	margin: 0 2% 40px;
+}
+
+@media screen and (max-width: 900px){
+	.mat-card{
+		padding: 24px;
+	}
+	.card-grid-card{
+		float: none;
+		width: auto;
+	}
+	.card-grid-card.middle{
+		margin: 0 0 40px;
+	}
+	.card-grid-card.last{
+		margin: 0;
+	}
 }
